# fastats

./: .gitignore  Cargo.toml  README.md
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: rust.yml
src/: lib.rs  main.rs
tests/resources/: hg38.snippets.fasta
