[package]
name = "fastats"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
keywords = ["fasta", "bioinformatics"]
categories = ["science::bioinformatics::genomics", "command-line-utilities"]
description = "CLI to generate FASTA file statistics (masking, GC content, etc.)."
homepage = "https://github.com/roland-ewald/fastats"
repository = "https://github.com/roland-ewald/fastats"
readme = "README.md"

[dependencies]
bstr = "1.12.0"
clap = { version = "4.5.42", features = ["derive"] }
digest = "0.10.7"
lazy_static = "1.5.0"
noodles-bed = "0.27.0"
noodles-core = "0.18.0"
noodles-fasta = "0.55.0"
rayon = "1.11.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.20.0"

[[bin]]
name = "fastats"
path = "src/main.rs"
